# finance

./: .gitignore  Pipfile  alembic_upgrade.sh  commit.sh  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 8378893754b9_iniciar.py
docs/ddl/: ddl_mysql.sql  ddl_postgresql.sql
docs/diagrams/: fc_1_usecase001.md  fc_1_usecase002.md
docs/diagrams/10_manutencao_dados/: usecase_001.md  usecase_002.md  usecase_003.md
docs/diagrams/1_autenticar/: fc_1_usecase001.md  fc_1_usecase002.md  fc_1_usecase003.md  fc_1_usecase004.md
docs/diagrams/2_gerenciar_portifolio/: fc_1_usecase001.md  fc_1_usecase002.md  fc_1_usecase003.md  usecase001.md  usecase002.md  usecase003.md  usecase004.md  usecase005.md  usecase006.md
docs/diagrams/3_gerenciar_ativos/: usecase_001.md  usecase_002.md  usecase_003.md  (+1 more)
docs/dml/: activity_log.sql  asset.sql  asset_price_history.sql  asset_projection.sql  portfolio_asset_details.sql  portifolio.sql  price_alert.sql  transaction.sql  user.sql  user_preferences.sql
docs/modelos/: modelo_conceitual.md  modelo_conceitual_v2.md  modelo_fisico.md
docs/requisitos/: functional_require.md  non_functional_require.md
docs/usecase/: usecases.md
src/core/: __init__.py
src/db/: base_class.py  session.py
src/models/: __init__.py  activity_logs.py  asset.py  asset_price_history.py  asset_projection.py  audity_log.py  portfolio.py  portfolio_asset_details.py  price_alert.py  transaction.py  user.py  user_preferences.py
tests/: conftest.py
tests/db/: create_user_database_test.py  finance.db  test.db  test_database_connection.py
(+66 files in other folders)
